<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_tip_selection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.beboplabs.tipotron.TipSelectionActivity">
    <include layout="@layout/content_main"/>

    <Button
        android:theme="@style/MyButton"
        android:id="@+id/zero_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terrible_serivce"
        android:onClick="makeButtonsInvisible"
        android:elevation="3dp"
        android:alpha=".85"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp" />

    <Button
        android:theme="@style/MyButton"
        android:id="@+id/ten_tip"
        android:layout_below="@id/zero_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bad_service"
        android:onClick="makeButtonsInvisible"
        android:alpha=".85"
        android:layout_centerHorizontal="true" />

    <Button
        android:theme="@style/MyButton"
        android:id="@+id/fifteen_tip"
        android:layout_below="@id/ten_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/okay_service"
        android:onClick="makeButtonsInvisible"
        android:alpha=".85"
        android:layout_centerHorizontal="true" />

    <Button
        android:theme="@style/MyButton"
        android:id="@+id/eighteen_tip"
        android:layout_below="@id/fifteen_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/good_service"
        android:onClick="makeButtonsInvisible"
        android:alpha=".85"
        android:layout_centerHorizontal="true" />

    <Button
        android:theme="@style/MyButton"
        android:id="@+id/twenty_tip"
        android:layout_below="@id/eighteen_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/great_service"
        android:onClick="makeButtonsInvisible"
        android:alpha=".85"
        android:layout_centerHorizontal="true" />

    <Button
        android:theme="@style/MyButton"
        android:id="@+id/twenty_five_tip"
        android:layout_below="@id/twenty_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/best_service"
        android:onClick="makeButtonsInvisible"
        android:alpha=".85"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tip_amount_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_tangerine"
        android:text="@string/tip_amount"
        android:layout_alignBaseline="@+id/eighteen_tip"
        android:layout_alignBottom="@+id/eighteen_tip"
        android:layout_alignEnd="@+id/ten_tip" />

    <TextView
        android:id="@+id/tip_amount"
        android:textColor="@color/tip_and_total_green"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tip_amount_text"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/check_total_amount"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@id/tip_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_tangerine"
        android:text="@string/total_amount_after_tax"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/total_amount_with_tip"
        android:textColor="@color/tip_and_total_green"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/check_total_amount"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
